--- a/main/dfeedback.html
+++ b/main/dfeedback.html
@@ -837,7 +837,7 @@
                                                 <input type="radio" name="fbrating" value="Poor " class="" id="ratepoorradio" data-parsley-multiple="loclink" data-parsley-error-message="1 selection is required." />
                                                 <label for="ratepoorradio" class="textc">Poor</label><br>
                                                 <input type="radio" name="fbrating" value="Unsatisfactory " class="" id="rateunsatradio" data-parsley-multiple="loclink" data-parsley-required data-parsley-error-message="Please choose 1" />
-                                                <label for="repdelradio" class="textc">Unsatisfactory</label><br>
+                                                <label for="rateunsatradio" class="textc">Unsatisfactory</label><br>
                                                 <input type="radio" name="fbcontent" value="Report/Letter Turnaround " class="" id="repturnradio" data-parsley-multiple="loclink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="repturnradio" class="textc">Satisfactory</label><br>
                                                 <input type="radio" name="fbcontent" value="Unsatisfactory Diagnosis " class="" id="unsatdiagradio" data-parsley-multiple="loclink" data-parsley-required data-parsley-error-message="Please choose 1" />
