--- a/main/dfeedback.html
+++ b/main/dfeedback.html
@@ -838,7 +838,7 @@
                                                 <label for="ratepoorradio" class="textc">Poor</label><br>
                                                 <input type="radio" name="fbrating" value="Unsatisfactory " class="" id="rateunsatradio" data-parsley-multiple="loclink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="rateunsatradio" class="textc">Unsatisfactory</label><br>
-                                                <input type="radio" name="fbcontent" value="Report/Letter Turnaround " class="" id="repturnradio" data-parsley-multiple="loclink" data-parsley-required data-parsley-error-message="Please choose 1" />
+                                                <input type="radio" name="fbrating" value="Satisfactory " class="" id="ratesatradio" data-parsley-multiple="loclink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="repturnradio" class="textc">Satisfactory</label><br>
                                                 <input type="radio" name="fbcontent" value="Unsatisfactory Diagnosis " class="" id="unsatdiagradio" data-parsley-multiple="loclink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="unsatdiagradio" class="textc">Good</label><br>
