--- a/main/dfeedback.html
+++ b/main/dfeedback.html
@@ -839,7 +839,7 @@
                                                 <input type="radio" name="fbrating" value="Unsatisfactory " class="" id="rateunsatradio" data-parsley-multiple="loclink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="rateunsatradio" class="textc">Unsatisfactory</label><br>
                                                 <input type="radio" name="fbrating" value="Satisfactory " class="" id="ratesatradio" data-parsley-multiple="loclink" data-parsley-required data-parsley-error-message="Please choose 1" />
-                                                <label for="repturnradio" class="textc">Satisfactory</label><br>
+                                                <label for="ratesatradio" class="textc">Satisfactory</label><br>
                                                 <input type="radio" name="fbrating" value="Good " class="" id="rategoodradio" data-parsley-multiple="loclink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="rategoodradio" class="textc">Good</label><br>
                                                 <input type="radio" name="fbcontent" value="Unsatisfactory Communication " class="" id="unsatcommradio" data-parsley-multiple="loclink" data-parsley-required data-parsley-error-message="Please choose 1" />
