--- a/main/dfeedback.html
+++ b/main/dfeedback.html
@@ -843,7 +843,7 @@
                                                 <input type="radio" name="fbrating" value="Good " class="" id="rategoodradio" data-parsley-multiple="loclink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="rategoodradio" class="textc">Good</label><br>
                                                 <input type="radio" name="fbrating" value="Excellent " class="" id="rateexcelradio" data-parsley-multiple="loclink" data-parsley-required data-parsley-error-message="Please choose 1" />
-                                                <label for="unsatcommradio" class="textc">Excellent</label>
+                                                <label for="rateexcelradio" class="textc">Excellent</label>
                                             </div>
 
                                             <div class="input-wrapper">
