--- a/main/dfeedback.html
+++ b/main/dfeedback.html
@@ -834,7 +834,7 @@
                                             
                                             <p class="mt-3 textc reqstar">Rating of Service</p>
                                             <div>
-                                                <input type="radio" name="fbrating" value="Poor " class="" id="ratepoorradio" data-parsley-multiple="loclink" data-parsley-error-message="1 selection is required." />
+                                                <input type="radio" name="fbrating" value="Poor " class="" id="ratepoorradio" data-parsley-multiple="ratelink" data-parsley-error-message="1 selection is required." />
                                                 <label for="ratepoorradio" class="textc">Poor</label><br>
                                                 <input type="radio" name="fbrating" value="Unsatisfactory " class="" id="rateunsatradio" data-parsley-multiple="loclink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="rateunsatradio" class="textc">Unsatisfactory</label><br>
