--- a/main/dfeedback.html
+++ b/main/dfeedback.html
@@ -836,7 +836,7 @@
                                             <div>
                                                 <input type="radio" name="fbrating" value="Poor " class="" id="ratepoorradio" data-parsley-multiple="ratelink" data-parsley-error-message="1 selection is required." />
                                                 <label for="ratepoorradio" class="textc">Poor</label><br>
-                                                <input type="radio" name="fbrating" value="Unsatisfactory " class="" id="rateunsatradio" data-parsley-multiple="loclink" data-parsley-required data-parsley-error-message="Please choose 1" />
+                                                <input type="radio" name="fbrating" value="Unsatisfactory " class="" id="rateunsatradio" data-parsley-multiple="ratelink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="rateunsatradio" class="textc">Unsatisfactory</label><br>
                                                 <input type="radio" name="fbrating" value="Satisfactory " class="" id="ratesatradio" data-parsley-multiple="loclink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="ratesatradio" class="textc">Satisfactory</label><br>
