--- a/main/dfeedback.html
+++ b/main/dfeedback.html
@@ -840,7 +840,7 @@
                                                 <label for="rateunsatradio" class="textc">Unsatisfactory</label><br>
                                                 <input type="radio" name="fbrating" value="Satisfactory " class="" id="ratesatradio" data-parsley-multiple="ratelink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="ratesatradio" class="textc">Satisfactory</label><br>
-                                                <input type="radio" name="fbrating" value="Good " class="" id="rategoodradio" data-parsley-multiple="loclink" data-parsley-required data-parsley-error-message="Please choose 1" />
+                                                <input type="radio" name="fbrating" value="Good " class="" id="rategoodradio" data-parsley-multiple="ratelink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="rategoodradio" class="textc">Good</label><br>
                                                 <input type="radio" name="fbrating" value="Excellent " class="" id="rateexcelradio" data-parsley-multiple="loclink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="rateexcelradio" class="textc">Excellent</label>
