--- a/main/dfeedback.html
+++ b/main/dfeedback.html
@@ -833,7 +833,7 @@
 
                                         </fieldset>
                                         <input type="text" name="_honey" style="display:none">
-                                        <button type="submit" class="boldbtn mt-3 py-3" style="border: none; width: 100%">Next</button>
+                                        <button type="submit" class="boldbtn mt-3 py-3" style="border: none; width: 100%">Submit</button>
                                     </form>
                                 </div>
                             </div>
