--- a/main/dfeedback.html
+++ b/main/dfeedback.html
@@ -633,7 +633,7 @@
                 <div class="col-sm-1"></div>
                 <div class="col-12 col-sm-10 pt-5 text3 container container--adaptive">
                     <p class="textp1">
-                        If you are a patient wishing to provide us with feedback of your experience with us, please use the Patient Feedback form <a href="pfeedback" class="textlink textb">here</a>
+                        If you are a patient wishing to provide us with feedback of your experience with us, please use the Patient Feedback form <a href="pfeedback" class="textlink textb">here</a>.
                     </p>
                     <hr style="border: 1px solid var(--color-contrast-higher)" class="mt-5">
                     <div class="container">
