--- a/main/dfeedback.html
+++ b/main/dfeedback.html
@@ -779,7 +779,7 @@
                                                 </svg>
                                             </div>
                                             
-                                            <p class="mt-3 textc reqstar">Rating of Service</p>
+                                            <p class="mt-3 textc reqstar">Type of Feedback</p>
                                             <div>
                                                 <input type="radio" name="fbrating" value="Poor " class="" id="ratepoorradio" data-parsley-multiple="ratelink" data-parsley-error-message="1 selection is required." />
                                                 <label for="ratepoorradio" class="textc">Poor</label><br>
