--- a/main/dfeedback.html
+++ b/main/dfeedback.html
@@ -786,11 +786,7 @@
                                                 <input type="radio" name="fbrating" value="Unsatisfactory " class="" id="rateunsatradio" data-parsley-multiple="ratelink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="rateunsatradio" class="textc">Compliant</label><br>
                                                 <input type="radio" name="fbrating" value="Satisfactory " class="" id="ratesatradio" data-parsley-multiple="ratelink" data-parsley-required data-parsley-error-message="Please choose 1" />
-                                                <label for="ratesatradio" class="textc">Comment</label><br>
-                                                <input type="radio" name="fbrating" value="Good " class="" id="rategoodradio" data-parsley-multiple="ratelink" data-parsley-required data-parsley-error-message="Please choose 1" />
-                                                <label for="rategoodradio" class="textc">Good</label><br>
-                                                <input type="radio" name="fbrating" value="Excellent " class="" id="rateexcelradio" data-parsley-multiple="ratelink" data-parsley-required data-parsley-error-message="Please choose 1" />
-                                                <label for="rateexcelradio" class="textc">Excellent</label>
+                                                <label for="ratesatradio" class="textc">Comment</label>
                                             </div>
 
                                             <p class="mt-3 textc reqstar">Content of Feedback</p>
