--- a/main/dfeedback.html
+++ b/main/dfeedback.html
@@ -781,7 +781,7 @@
                                             
                                             <p class="mt-3 textc reqstar">Type of Feedback</p>
                                             <div>
-                                                <input type="radio" name="fbrating" value="Poor " class="" id="ratepoorradio" data-parsley-multiple="typefblink" data-parsley-error-message="1 selection is required." />
+                                                <input type="radio" name="fbtype" value="Compliment " class="" id="typecompliradio" data-parsley-multiple="typefblink" data-parsley-error-message="1 selection is required." />
                                                 <label for="ratepoorradio" class="textc">Compliment</label><br>
                                                 <input type="radio" name="fbrating" value="Unsatisfactory " class="" id="rateunsatradio" data-parsley-multiple="typefblink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="rateunsatradio" class="textc">Compliant</label><br>
