--- a/main/dfeedback.html
+++ b/main/dfeedback.html
@@ -782,7 +782,7 @@
                                             <p class="mt-3 textc reqstar">Type of Feedback</p>
                                             <div>
                                                 <input type="radio" name="fbtype" value="Compliment " class="" id="typecompliradio" data-parsley-multiple="typefblink" data-parsley-error-message="1 selection is required." />
-                                                <label for="ratepoorradio" class="textc">Compliment</label><br>
+                                                <label for="typecompliradio" class="textc">Compliment</label><br>
                                                 <input type="radio" name="fbrating" value="Unsatisfactory " class="" id="rateunsatradio" data-parsley-multiple="typefblink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="rateunsatradio" class="textc">Compliant</label><br>
                                                 <input type="radio" name="fbrating" value="Satisfactory " class="" id="ratesatradio" data-parsley-multiple="typefblink" data-parsley-required data-parsley-error-message="Please choose 1" />
