--- a/main/dfeedback.html
+++ b/main/dfeedback.html
@@ -784,7 +784,7 @@
                                                 <input type="radio" name="fbtype" value="Compliment " class="" id="typecompliradio" data-parsley-multiple="typefblink" data-parsley-error-message="1 selection is required." />
                                                 <label for="typecompliradio" class="textc">Compliment</label><br>
                                                 <input type="radio" name="fbtype" value="Complaint " class="" id="typecomplaintradio" data-parsley-multiple="typefblink" data-parsley-required data-parsley-error-message="Please choose 1" />
-                                                <label for="rateunsatradio" class="textc">Compliant</label><br>
+                                                <label for="rateunsatradio" class="textc">Complaint</label><br>
                                                 <input type="radio" name="fbrating" value="Satisfactory " class="" id="ratesatradio" data-parsley-multiple="typefblink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="ratesatradio" class="textc">Comment</label>
                                             </div>
