--- a/main/dfeedback.html
+++ b/main/dfeedback.html
@@ -785,7 +785,7 @@
                                                 <label for="typecompliradio" class="textc">Compliment</label><br>
                                                 <input type="radio" name="fbtype" value="Complaint " class="" id="typecomplaintradio" data-parsley-multiple="typefblink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="typecomplaintradio" class="textc">Complaint</label><br>
-                                                <input type="radio" name="fbrating" value="Satisfactory " class="" id="ratesatradio" data-parsley-multiple="typefblink" data-parsley-required data-parsley-error-message="Please choose 1" />
+                                                <input type="radio" name="fbtype" value="Comment " class="" id="typecommradio" data-parsley-multiple="typefblink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="ratesatradio" class="textc">Comment</label>
                                             </div>
 
