--- a/main/dfeedback.html
+++ b/main/dfeedback.html
@@ -786,7 +786,7 @@
                                                 <input type="radio" name="fbtype" value="Complaint " class="" id="typecomplaintradio" data-parsley-multiple="typefblink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="typecomplaintradio" class="textc">Complaint</label><br>
                                                 <input type="radio" name="fbtype" value="Comment " class="" id="typecommradio" data-parsley-multiple="typefblink" data-parsley-required data-parsley-error-message="Please choose 1" />
-                                                <label for="ratesatradio" class="textc">Comment</label>
+                                                <label for="typecommradio" class="textc">Comment</label>
                                             </div>
 
                                             <p class="mt-3 textc reqstar">Content of Feedback</p>
