--- a/main/dfeedback.html
+++ b/main/dfeedback.html
@@ -1269,7 +1269,7 @@
         });
 
     </script>
-    <script>
+    <!--<script>
         function autocomplete(inp, arr) {
             /*the autocomplete function takes two arguments,
             the text field element and an array of possible autocompleted values:*/
@@ -1376,7 +1376,7 @@
 
         autocomplete(document.getElementById("typefb"), typeFeedback);
 
-    </script>
+    </script>-->
     <!--<script>
         $(document).ready(function() {
             .on('success.form.bv', function(e) {
