--- a/main/index.html
+++ b/main/index.html
@@ -404,7 +404,7 @@
                         </ol>
                     </li>
                     <li class="menu-item dtmenuitem">
-                        <a href="patients" class="dtmenuheader">Contact</a>
+                        <a href="contact" class="dtmenuheader">Contact</a>
                         <ol class="sub-menu">
                             <li class="menu-item"><a href="book">Request Appointment</a></li>
                             <li class="menu-item"><a href="contact">General Enquiries</a></li>
