--- a/main/pfeedback.html
+++ b/main/pfeedback.html
@@ -644,8 +644,8 @@
                                         <fieldset>
                                             <div class="twingroup">
                                                 <div class="input-wrapper twin">
-                                                    <input data-parsley-trigger="change" data-parsley-error-message="First name required." type="text" name="ref dr first name" title="Doctor's first name" id="dfirstname" value="" aria-required="true" required="" class="form__input">
-                                                    <label class="form__label reqstar" for="dfirstname">First Name
+                                                    <input data-parsley-trigger="change" data-parsley-error-message="First name required." type="text" name="patient first name" title="Patient's first name" id="pfirstname" value="" aria-required="true" required="" class="form__input">
+                                                    <label class="form__label reqstar" for="pfirstname">First Name
                                                         <svg class="form__valid" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="611.983px" height="611.983px" viewBox="0 0 611.983 611.983" style="enable-background:new 0 0 611.983 611.983;" xml:space="preserve">
                                                             <g>
                                                                 <path d="M217.625,515.458h-0.06c-6.517,0-12.775-2.65-17.379-7.255L7.147,313.77c-9.586-9.646-9.506-25.211,0.1-34.757
@@ -667,8 +667,8 @@
                                                 </div>
 
                                                 <div class="input-wrapper twin">
-                                                    <input data-parsley-trigger="change" data-parsley-error-message="Last name required." type="text" name="ref dr last name" title="Doctor's last name" id="dlastname" value="" aria-required="true" required="" class="form__input">
-                                                    <label class="form__label reqstar" for="dlastname">Last Name
+                                                    <input data-parsley-trigger="change" data-parsley-error-message="Last name required." type="text" name="patient last name" title="Patient's last name" id="plastname" value="" aria-required="true" required="" class="form__input">
+                                                    <label class="form__label reqstar" for="plastname">Last Name
                                                         <svg class="form__valid" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="611.983px" height="611.983px" viewBox="0 0 611.983 611.983" style="enable-background:new 0 0 611.983 611.983;" xml:space="preserve">
                                                             <g>
                                                                 <path d="M217.625,515.458h-0.06c-6.517,0-12.775-2.65-17.379-7.255L7.147,313.77c-9.586-9.646-9.506-25.211,0.1-34.757
@@ -689,9 +689,11 @@
                                                     </svg>
                                                 </div>
                                             </div>
+
                                             <div class="input-wrapper">
-                                                <input data-parsley-trigger="change" data-parsley-error-message="Provider number required." type="text" name="ref dr provider number" title="Provider Number" id="dprovidernum" value="" aria-required="true" required="" class="form__input" maxlength="10">
-                                                <label class="form__label reqstar" for="dprovidernum">Provider Number
+                                                <input data-parsley-trigger="change" data-parsley-error-message="DOB required." type="text" title="Patient's date of birth" id="date" value="" aria-required="true" required="" class="form__input" oninput="formatDate()">
+                                                <input id="outputDate" type="date" name="patient dob" value="" style="display: none">
+                                                <label class="form__label reqstar" for="date">Date of Birth (dd/mm/yyyy)
                                                     <svg class="form__valid" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="611.983px" height="611.983px" viewBox="0 0 611.983 611.983" style="enable-background:new 0 0 611.983 611.983;" xml:space="preserve">
                                                         <g>
                                                             <path d="M217.625,515.458h-0.06c-6.517,0-12.775-2.65-17.379-7.255L7.147,313.77c-9.586-9.646-9.506-25.211,0.1-34.757
@@ -711,9 +713,10 @@
                                                     </g>
                                                 </svg>
                                             </div>
+
                                             <div class="input-wrapper">
-                                                <textarea data-parsley-trigger="keyup" data-parsley-minlength="2" data-parsley-validation-threshold="1" data-parsley-error-message="Address required." name="correspondence address" title="Correspondence Address" id="daddress" value="" aria-required="false" class="form__input"></textarea>
-                                                <label class="form__label" for="daddress">Correspondence Address
+                                                <input data-parsley-trigger="keyup" data-parsley-error-message="Phone number required." type="text" name="patient mobile" title="Phone Number" id="pmobile" value="" aria-required="true" required="" class="form__input" maxlength="12">
+                                                <label class="form__label reqstar" for="pmobile">Mobile Number
                                                     <svg class="form__valid" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="611.983px" height="611.983px" viewBox="0 0 611.983 611.983" style="enable-background:new 0 0 611.983 611.983;" xml:space="preserve">
                                                         <g>
                                                             <path d="M217.625,515.458h-0.06c-6.517,0-12.775-2.65-17.379-7.255L7.147,313.77c-9.586-9.646-9.506-25.211,0.1-34.757
@@ -733,6 +736,7 @@
                                                     </g>
                                                 </svg>
                                             </div>
+                                            
                                             <div class="input-wrapper">
                                                 <input data-parsley-trigger="change" data-parsley-error-message="Email required." type="email" name="ref dr email" aria-required="true" required="" id="demail" value="" class="form__input">
                                                 <label class="form__label reqstar" for="demail">Email
