--- a/main/pfeedback.html
+++ b/main/pfeedback.html
@@ -760,6 +760,18 @@
                                                 </svg>
                                             </div>
                                             
+                                            <p class="mt-3 textc reqstar">Investigation Required</p>
+                                            <div>
+                                                <input type="checkbox" name="echo" value="echo " class="qcheck" id="echocheck" data-parsley-multiple="investigationrequiredlink" data-parsley-error-message="At least 1 selection is required." />
+                                                <label for="echocheck" class="textc">Echocardiography</label><br>
+                                                <input type="checkbox" name="stress echo" value="stressecho " class="qcheck" id="stressechocheck" data-parsley-multiple="investigationrequiredlink" data-parsley-mincheck="1" data-parsley-required data-parsley-error-message="Please choose at least 1" />
+                                                <label for="stressechocheck" class="textc">Stress Echocardiography</label><br>
+                                                <input type="checkbox" name="holter" value="holter " class="qcheck" id="holtercheck" data-parsley-multiple="investigationrequiredlink" data-parsley-mincheck="1" data-parsley-required data-parsley-error-message="Please choose at least 1" />
+                                                <label for="holtercheck" class="textc">Holter Monitoring</label><br>
+                                                <input type="checkbox" name="consult" value="consult " class="qcheck" id="consultcheck" data-parsley-multiple="investigationrequiredlink" data-parsley-mincheck="1" data-parsley-required data-parsley-error-message="Please choose at least 1" />
+                                                <label for="consultcheck" class="textc">Consultation</label>
+                                            </div>
+                                            
                                             <p class="mt-3 textc reqstar">Type of Feedback</p>
                                             <div>
                                                 <input type="radio" name="fbtype" value="Compliment " class="" id="typecompliradio" data-parsley-multiple="typefblink" data-parsley-error-message="1 selection is required." />
