--- a/main/pfeedback.html
+++ b/main/pfeedback.html
@@ -772,7 +772,7 @@
                                                 <label for="consultcheck" class="textc">Consultation</label>
                                             </div>
                                             
-                                            <p class="mt-3 textc reqstar">Rating of Service</p>
+                                            <p class="mt-3 textc reqstar">Ease of scheduling an appointment</p>
                                             <div>
                                                 <input type="radio" name="fbrating" value="Poor " class="" id="ratepoorradio" data-parsley-multiple="ratelink" data-parsley-error-message="1 selection is required." />
                                                 <label for="ratepoorradio" class="textc">Poor</label><br>
