--- a/main/pfeedback.html
+++ b/main/pfeedback.html
@@ -781,7 +781,7 @@
                                                 <input type="radio" name="fbrating" value="Satisfactory " class="" id="ratesatradio" data-parsley-multiple="ratelink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="ratesatradio" class="textc">Neutral</label><br>
                                                 <input type="radio" name="fbrating" value="Good " class="" id="rategoodradio" data-parsley-multiple="ratelink" data-parsley-required data-parsley-error-message="Please choose 1" />
-                                                <label for="rategoodradio" class="textc">Good</label><br>
+                                                <label for="rategoodradio" class="textc">Disagree</label><br>
                                                 <input type="radio" name="fbrating" value="Excellent " class="" id="rateexcelradio" data-parsley-multiple="ratelink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="rateexcelradio" class="textc">Excellent</label>
                                             </div>
