--- a/main/pfeedback.html
+++ b/main/pfeedback.html
@@ -774,8 +774,8 @@
                                             
                                             <p class="mt-3 textc reqstar">Ease of scheduling an appointment</p>
                                             <div>
-                                                <input type="radio" name="pfbschrating" value="Poor " class="" id="ratepoorradio" data-parsley-multiple="ratelink" data-parsley-error-message="1 selection is required." />
-                                                <label for="ratepoorradio" class="textc">Strongly Agree</label><br>
+                                                <input type="radio" name="pfbschrating" value="Strongly Agree " class="" id="scheradio" data-parsley-multiple="ratelink" data-parsley-error-message="1 selection is required." />
+                                                <label for="scheradio" class="textc">Strongly Agree</label><br>
                                                 <input type="radio" name="pfbschrating" value="Unsatisfactory " class="" id="rateunsatradio" data-parsley-multiple="ratelink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="rateunsatradio" class="textc">Agree</label><br>
                                                 <input type="radio" name="pfbschrating" value="Satisfactory " class="" id="ratesatradio" data-parsley-multiple="ratelink" data-parsley-required data-parsley-error-message="Please choose 1" />
