--- a/main/pfeedback.html
+++ b/main/pfeedback.html
@@ -774,10 +774,10 @@
                                             
                                             <p class="mt-3 textc reqstar">Ease of scheduling an appointment</p>
                                             <div>
-                                                <input type="radio" name="pfbschrating" value="Strongly Agree " class="" id="scheradio" data-parsley-multiple="ratelink" data-parsley-error-message="1 selection is required." />
-                                                <label for="scheradio" class="textc">Strongly Agree</label><br>
-                                                <input type="radio" name="pfbschrating" value="Unsatisfactory " class="" id="rateunsatradio" data-parsley-multiple="ratelink" data-parsley-required data-parsley-error-message="Please choose 1" />
-                                                <label for="rateunsatradio" class="textc">Agree</label><br>
+                                                <input type="radio" name="pfbschrating" value="Strongly Agree " class="" id="schestragradio" data-parsley-multiple="ratelink" data-parsley-error-message="1 selection is required." />
+                                                <label for="schestragradio" class="textc">Strongly Agree</label><br>
+                                                <input type="radio" name="pfbschrating" value="Agree " class="" id="scheagradio" data-parsley-multiple="ratelink" data-parsley-required data-parsley-error-message="Please choose 1" />
+                                                <label for="scheagradio" class="textc">Agree</label><br>
                                                 <input type="radio" name="pfbschrating" value="Satisfactory " class="" id="ratesatradio" data-parsley-multiple="ratelink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="ratesatradio" class="textc">Neutral</label><br>
                                                 <input type="radio" name="pfbschrating" value="Good " class="" id="rategoodradio" data-parsley-multiple="ratelink" data-parsley-required data-parsley-error-message="Please choose 1" />
