--- a/main/pfeedback.html
+++ b/main/pfeedback.html
@@ -778,8 +778,8 @@
                                                 <label for="schestragradio" class="textc">Strongly Agree</label><br>
                                                 <input type="radio" name="pfbschrating" value="Agree " class="" id="scheagradio" data-parsley-multiple="ratelink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="scheagradio" class="textc">Agree</label><br>
-                                                <input type="radio" name="pfbschrating" value="Satisfactory " class="" id="ratesatradio" data-parsley-multiple="ratelink" data-parsley-required data-parsley-error-message="Please choose 1" />
-                                                <label for="ratesatradio" class="textc">Neutral</label><br>
+                                                <input type="radio" name="pfbschrating" value="Neutral " class="" id="scheneuradio" data-parsley-multiple="ratelink" data-parsley-required data-parsley-error-message="Please choose 1" />
+                                                <label for="scheneuradio" class="textc">Neutral</label><br>
                                                 <input type="radio" name="pfbschrating" value="Good " class="" id="rategoodradio" data-parsley-multiple="ratelink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="rategoodradio" class="textc">Disagree</label><br>
                                                 <input type="radio" name="pfbschrating" value="Excellent " class="" id="rateexcelradio" data-parsley-multiple="ratelink" data-parsley-required data-parsley-error-message="Please choose 1" />
