--- a/main/pfeedback.html
+++ b/main/pfeedback.html
@@ -780,8 +780,8 @@
                                                 <label for="scheagradio" class="textc">Agree</label><br>
                                                 <input type="radio" name="pfbschrating" value="Neutral " class="" id="scheneuradio" data-parsley-multiple="ratelink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="scheneuradio" class="textc">Neutral</label><br>
-                                                <input type="radio" name="pfbschrating" value="Good " class="" id="rategoodradio" data-parsley-multiple="ratelink" data-parsley-required data-parsley-error-message="Please choose 1" />
-                                                <label for="rategoodradio" class="textc">Disagree</label><br>
+                                                <input type="radio" name="pfbschrating" value="Disagree " class="" id="schedisagradio" data-parsley-multiple="ratelink" data-parsley-required data-parsley-error-message="Please choose 1" />
+                                                <label for="schedisagradio" class="textc">Disagree</label><br>
                                                 <input type="radio" name="pfbschrating" value="Excellent " class="" id="rateexcelradio" data-parsley-multiple="ratelink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="rateexcelradio" class="textc">Strongly Disagree</label>
                                             </div>
