--- a/main/pfeedback.html
+++ b/main/pfeedback.html
@@ -788,15 +788,15 @@
                                             
                                             <p class="mt-3 textc reqstar">Reception staff were helpful and courteous</p>
                                             <div>
-                                                <input type="radio" name="pfbstaffrating" value="Strongly Agree " class="" id="schestragradio" data-parsley-multiple="rateschelink" data-parsley-error-message="1 selection is required." />
+                                                <input type="radio" name="pfbstaffrating" value="Strongly Agree " class="" id="schestragradio" data-parsley-multiple="ratestafflink" data-parsley-error-message="1 selection is required." />
                                                 <label for="schestragradio" class="textc">Strongly Agree</label><br>
-                                                <input type="radio" name="pfbstaffrating" value="Agree " class="" id="scheagradio" data-parsley-multiple="rateschelink" data-parsley-required data-parsley-error-message="Please choose 1" />
+                                                <input type="radio" name="pfbstaffrating" value="Agree " class="" id="scheagradio" data-parsley-multiple="ratestafflink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="scheagradio" class="textc">Agree</label><br>
-                                                <input type="radio" name="pfbstaffrating" value="Neutral " class="" id="scheneuradio" data-parsley-multiple="rateschelink" data-parsley-required data-parsley-error-message="Please choose 1" />
+                                                <input type="radio" name="pfbstaffrating" value="Neutral " class="" id="scheneuradio" data-parsley-multiple="ratestafflink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="scheneuradio" class="textc">Neutral</label><br>
-                                                <input type="radio" name="pfbstaffrating" value="Disagree " class="" id="schedisagradio" data-parsley-multiple="rateschelink" data-parsley-required data-parsley-error-message="Please choose 1" />
+                                                <input type="radio" name="pfbstaffrating" value="Disagree " class="" id="schedisagradio" data-parsley-multiple="ratestafflink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="schedisagradio" class="textc">Disagree</label><br>
-                                                <input type="radio" name="pfbstaffrating" value="Strongly Disagree " class="" id="schestrdisagradio" data-parsley-multiple="rateschelink" data-parsley-required data-parsley-error-message="Please choose 1" />
+                                                <input type="radio" name="pfbstaffrating" value="Strongly Disagree " class="" id="schestrdisagradio" data-parsley-multiple="ratestafflink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="schestrdisagradio" class="textc">Strongly Disagree</label>
                                             </div>
 
