--- a/main/pfeedback.html
+++ b/main/pfeedback.html
@@ -790,8 +790,8 @@
                                             <div>
                                                 <input type="radio" name="pfbstaffrating" value="Strongly Agree " class="" id="staffstragradio" data-parsley-multiple="ratestafflink" data-parsley-error-message="1 selection is required." />
                                                 <label for="staffstragradio" class="textc">Strongly Agree</label><br>
-                                                <input type="radio" name="pfbstaffrating" value="Agree " class="" id="scheagradio" data-parsley-multiple="ratestafflink" data-parsley-required data-parsley-error-message="Please choose 1" />
-                                                <label for="scheagradio" class="textc">Agree</label><br>
+                                                <input type="radio" name="pfbstaffrating" value="Agree " class="" id="staffagradio" data-parsley-multiple="ratestafflink" data-parsley-required data-parsley-error-message="Please choose 1" />
+                                                <label for="staffagradio" class="textc">Agree</label><br>
                                                 <input type="radio" name="pfbstaffrating" value="Neutral " class="" id="scheneuradio" data-parsley-multiple="ratestafflink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="scheneuradio" class="textc">Neutral</label><br>
                                                 <input type="radio" name="pfbstaffrating" value="Disagree " class="" id="schedisagradio" data-parsley-multiple="ratestafflink" data-parsley-required data-parsley-error-message="Please choose 1" />
