--- a/main/pfeedback.html
+++ b/main/pfeedback.html
@@ -799,6 +799,20 @@
                                                 <input type="radio" name="pfbstaffrating" value="Strongly Disagree " class="" id="staffstrdisagradio" data-parsley-multiple="ratestafflink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="staffstrdisagradio" class="textc">Strongly Disagree</label>
                                             </div>
+                                            
+                                            <p class="mt-3 textc reqstar">Reception staff were helpful and courteous</p>
+                                            <div>
+                                                <input type="radio" name="pfbstaffrating" value="Strongly Agree " class="" id="staffstragradio" data-parsley-multiple="ratestafflink" data-parsley-error-message="1 selection is required." />
+                                                <label for="staffstragradio" class="textc">Strongly Agree</label><br>
+                                                <input type="radio" name="pfbstaffrating" value="Agree " class="" id="staffagradio" data-parsley-multiple="ratestafflink" data-parsley-required data-parsley-error-message="Please choose 1" />
+                                                <label for="staffagradio" class="textc">Agree</label><br>
+                                                <input type="radio" name="pfbstaffrating" value="Neutral " class="" id="staffneuradio" data-parsley-multiple="ratestafflink" data-parsley-required data-parsley-error-message="Please choose 1" />
+                                                <label for="staffneuradio" class="textc">Neutral</label><br>
+                                                <input type="radio" name="pfbstaffrating" value="Disagree " class="" id="staffdisagradio" data-parsley-multiple="ratestafflink" data-parsley-required data-parsley-error-message="Please choose 1" />
+                                                <label for="staffdisagradio" class="textc">Disagree</label><br>
+                                                <input type="radio" name="pfbstaffrating" value="Strongly Disagree " class="" id="staffstrdisagradio" data-parsley-multiple="ratestafflink" data-parsley-required data-parsley-error-message="Please choose 1" />
+                                                <label for="staffstrdisagradio" class="textc">Strongly Disagree</label>
+                                            </div>
 
                                             <div class="input-wrapper">
                                                 <textarea name="notes" title="Notes" id="notes" value="" class="form__input txta" style="overflow: hidden"></textarea>
