--- a/main/pfeedback.html
+++ b/main/pfeedback.html
@@ -802,15 +802,15 @@
                                             
                                             <p class="mt-3 textc reqstar">The consultant/technician was professional and answered all my questions regarding the procedure</p>
                                             <div>
-                                                <input type="radio" name="pfbstaffrating" value="Strongly Agree " class="" id="staffstragradio" data-parsley-multiple="ratestafflink" data-parsley-error-message="1 selection is required." />
+                                                <input type="radio" name="pfbprofrating" value="Strongly Agree " class="" id="staffstragradio" data-parsley-multiple="ratestafflink" data-parsley-error-message="1 selection is required." />
                                                 <label for="staffstragradio" class="textc">Strongly Agree</label><br>
-                                                <input type="radio" name="pfbstaffrating" value="Agree " class="" id="staffagradio" data-parsley-multiple="ratestafflink" data-parsley-required data-parsley-error-message="Please choose 1" />
+                                                <input type="radio" name="pfbprofrating" value="Agree " class="" id="staffagradio" data-parsley-multiple="ratestafflink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="staffagradio" class="textc">Agree</label><br>
-                                                <input type="radio" name="pfbstaffrating" value="Neutral " class="" id="staffneuradio" data-parsley-multiple="ratestafflink" data-parsley-required data-parsley-error-message="Please choose 1" />
+                                                <input type="radio" name="pfbprofrating" value="Neutral " class="" id="staffneuradio" data-parsley-multiple="ratestafflink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="staffneuradio" class="textc">Neutral</label><br>
-                                                <input type="radio" name="pfbstaffrating" value="Disagree " class="" id="staffdisagradio" data-parsley-multiple="ratestafflink" data-parsley-required data-parsley-error-message="Please choose 1" />
+                                                <input type="radio" name="pfbprofrating" value="Disagree " class="" id="staffdisagradio" data-parsley-multiple="ratestafflink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="staffdisagradio" class="textc">Disagree</label><br>
-                                                <input type="radio" name="pfbstaffrating" value="Strongly Disagree " class="" id="staffstrdisagradio" data-parsley-multiple="ratestafflink" data-parsley-required data-parsley-error-message="Please choose 1" />
+                                                <input type="radio" name="pfbprofrating" value="Strongly Disagree " class="" id="staffstrdisagradio" data-parsley-multiple="ratestafflink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="staffstrdisagradio" class="textc">Strongly Disagree</label>
                                             </div>
 
