--- a/main/pfeedback.html
+++ b/main/pfeedback.html
@@ -816,8 +816,8 @@
                                             
                                             <p class="mt-3 textc reqstar">Information was provided without any delay</p>
                                             <div>
-                                                <input type="radio" name="pfbinforating" value="Strongly Agree " class="" id="staffstragradio" data-parsley-multiple="rateinfolink" data-parsley-error-message="1 selection is required." />
-                                                <label for="staffstragradio" class="textc">Strongly Agree</label><br>
+                                                <input type="radio" name="pfbinforating" value="Strongly Agree " class="" id="infostragradio" data-parsley-multiple="rateinfolink" data-parsley-error-message="1 selection is required." />
+                                                <label for="infostragradio" class="textc">Strongly Agree</label><br>
                                                 <input type="radio" name="pfbinforating" value="Agree " class="" id="staffagradio" data-parsley-multiple="rateinfolink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="staffagradio" class="textc">Agree</label><br>
                                                 <input type="radio" name="pfbinforating" value="Neutral " class="" id="staffneuradio" data-parsley-multiple="rateinfolink" data-parsley-required data-parsley-error-message="Please choose 1" />
