--- a/main/pfeedback.html
+++ b/main/pfeedback.html
@@ -822,8 +822,8 @@
                                                 <label for="infoagradio" class="textc">Agree</label><br>
                                                 <input type="radio" name="pfbinforating" value="Neutral " class="" id="infoneuradio" data-parsley-multiple="rateinfolink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="infoneuradio" class="textc">Neutral</label><br>
-                                                <input type="radio" name="pfbinforating" value="Disagree " class="" id="staffdisagradio" data-parsley-multiple="rateinfolink" data-parsley-required data-parsley-error-message="Please choose 1" />
-                                                <label for="staffdisagradio" class="textc">Disagree</label><br>
+                                                <input type="radio" name="pfbinforating" value="Disagree " class="" id="infodisagradio" data-parsley-multiple="rateinfolink" data-parsley-required data-parsley-error-message="Please choose 1" />
+                                                <label for="infodisagradio" class="textc">Disagree</label><br>
                                                 <input type="radio" name="pfbinforating" value="Strongly Disagree " class="" id="staffstrdisagradio" data-parsley-multiple="rateinfolink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="staffstrdisagradio" class="textc">Strongly Disagree</label>
                                             </div>
